@@ -57,6 +57,8 @@ BETA ======= 1.9.0
 - added: F.snapshop(url, filename, [callback]);
 - added: CLEANUP(stream, [callback]) - clean up readable streams
 - added: configs directory
+- added: F.behaviour(url, flags);
+- added: behaviour: disable-upload-dimension (default: false)
 
 - updated: (IMPORTANT) routing: `json` flag is not required for receiving incomming data as JSON
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
@@ -95,6 +97,7 @@ BETA ======= 1.9.0
 - fixed: F.log(), F.logger() –> problem with objects, reported by Nikita Shmidt
 - fixed: Number formatting (problem with negative numbers)
 
+- improved: performance +15%
 - improved: code optimalization
 - improved: Date.prototype.format()
 - improved: String.prototype.format()
